--- a/lectures2/web/variables0/templates/index.html
+++ b/lectures2/web/variables0/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My website!</title>
+	<title>My website!!!</title>
 </head>
 <body>
 	<h1> {{ headline }} </h1>
